Add closed-loop scheduler policy training
- orchestrate merge, ordinal training, candidate screening, benchmarking, and atomic corpus promotion
- replace quantile regression with a compact cumulative-decile DJL classifier optimized for top-policy precision
- batch training and screening with contiguous float buffers and reduced allocation
- add RTX 5080 CUDA 12.8 setup through a thin PyTorch/DJL distribution and reusable GPU launcher
- merge dependent module Logback settings through trainer-owned include fragments
- add allocation-free policy hashing, correctness fixes, focused tests, and architecture documentation